Fix UI Issue On Mobile Device MI Note 4

--- a/src/index.css
+++ b/src/index.css
@@ -25,6 +25,7 @@ code {
 
 .dark-mode {
   background-color: black;
+  min-height: 100vh;
 }
 
 .dark-mode h1 {
